# fck

./: .fck  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  INSTALLING.md  LICENSE  README.md  a.out  lexer.cpp  packages.config  test.fck
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: generic_template.md  new_language.md
.github/workflows/: rust_build.yml
BlenderFiles/: file.blend  file.blend1
PythonShell/: Arrows.py  Bases.py  ErrorExplanations.py  ErrorParser.py  Errors.py  ErrorsNew.py  Interpreter.py  Lexer.py  Nodes.py  Parser.py  README.md  Results.py  Tokens.py  Values.py  cli.py  errors.txt  fck_main.py  ideas.fck  maths_repr.py  shell.py  test.fck  test.py
PythonShell/fckErrors/: __init__.py  classes.py  explanations.py
docs/: Built-in types.rst  conf.py
docs/_build/_sources/: Built-in methods.rst.txt  Built-in types.rst.txt  Error messages.rst.txt  index.rst.txt
docs/_build/_static/: custom.css
docs/_build/doctrees/: Built-in methods.doctree  Built-in types.doctree  Error messages.doctree  Operators.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Built-in methods.html  Built-in types.html  Error messages.html  Operators.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: Built-in methods.rst.txt  Error messages.rst.txt  Operators.rst.txt  index.rst.txt
headers/: bases.h  err_warn.h  errors.h  nodes.h  results.h  tokens.h
headers_cpp/: bases.h  nodes.h  results.h  tokens.h  values.h
lang/: Cargo.toml  en.json
lang/fckl equivelents/: en.fckl  fr.fckl
lang/src/: de.rs  en.rs  fr.rs  keywords.rs  ko.rs  lib.rs
manifest_manager/: Cargo.toml  README.md
manifest_manager/src/: parser.rs
src/: ast.rs  bases.cpp  bases.rs  config_file.rs  err_wrn.rs  errors.cpp  interpreter.rs  lib.rs  llvm.rs  main.cpp  main.rs  nodes.rs  shell.rs  tokens.rs  translator.rs  types.rs
src/ErrWrn/: Cargo.toml
src/ErrWrn/src/: lib.rs
src/lang/: Cargo.toml  README.md
src/lang/fckl equivelents/: de.fckl
src/lang/src/: de.rs  en.rs  fr.rs  keywords.rs  ko.rs  lib.rs  main.rs
src/type_things/: Cargo.toml  README.md
src/type_things/src/: int.rs  lib.rs  prelude.rs  primitives.rs  symbol_tables.rs
src_cpp/: cli.cpp  main.cpp  results.cpp
tests/: README.md  comments.rs  conditionals.rs  generic.rs  language.rs
timed tests/fibonacci/: fibonacci.fck  fibonacci.py
