[package]
name = "fck"
description = "The source code for the fck coding language"
version = "0.1.0"
authors = ["RosiePuddles <rosiegbartlett@gmail.com>"]
edition = "2018"
repository = "https://github.com/fck-language/fck"
homepage = "https://fck-language.github.io"
readme = "README.md"
license = "GPL-3.0"
keywords = ["fck", "coding language"]
categories = ["internationalization"]

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
## External
# LLVM for compiling
llvm-sys = "140"
# Some nice cross platform formatting
colored = "2.0.0"
# Initialising new projects with git
git2 = "0.13"
# System dependant file locations
dirs = "4.0.0"
# Translator comment translation POST request handling
reqwest = { version = "0.11.10", features = ["blocking"] }

## Internal
# Multi-lingual handling
lang = { git = "https://github.com/fck-language/lang" }
# Type system
type_things = { path = "src/type_things", version = "0.1.0" }

[dev-dependencies]
itertools = "0.10.3"
