[package]
name = "ErrWrn"
description = "The library for errors and warnings used for fck"
version = "0.1.0"
authors = ["RosiePuddles <rosiegbartlett@gmail.om>"]
edition = "2018"
homepage = "https://github.com/RosiePuddles/fck/tree/main/src/ErrWrn"
readme = "README.md"
license = "GPL-3.0"

[badges]
maintenance = {status = "as-is"}

[dependencies]
